# generate-did

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test-examples.yml
examples/monorepo_example/: Cargo.toml  README.md  monorepo_example.did
examples/monorepo_example/src/: lib.rs
examples/workspace_example/: README.md  package.json
src/: lib.rs  main.rs
src/test_canister/: Cargo.toml
src/test_canister/src/: lib.rs
