[package]
name = "generate-did"
version = "0.1.0-beta.1"
edition = "2021"
authors = ["Steve Kimoi kimoisteve.ke@gmail.com"]
description = "A tool to generate Candid (.did) files for Internet Computer Rust canisters"
license = "MIT"
keywords = ["ic", "internet-computer", "candid", "did"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "generate-did"
path = "src/main.rs"